--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,20 @@ project(VIS)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(VIS main.cpp
-        PositionHandler.cpp
-        PositionHandler.h
-        Lexer.cpp
-        Lexer.h
-        Token.cpp
-        Token.h
-        Error.cpp
-        Error.h
-        Interpreter.cpp
-        Interpreter.h)
+# Add the include directory to the include path
+include_directories(include)
+
+set(SOURCES src/main.cpp
+            src/PositionHandler.cpp
+            src/Lexer.cpp
+            src/Error.cpp
+            src/Interpreter.cpp
+            src/SymbolTable.cpp
+            src/Parser.cpp
+            src/Node.cpp
+            src/Token.cpp
+            src/Literal.cpp
+            src/Context.cpp
+)
+
+add_executable(VIS ${SOURCES})
